--- a/CourseCardSystem/HomeField/HomeFieldConfig.json
+++ b/CourseCardSystem/HomeField/HomeFieldConfig.json
@@ -11,6 +11,16 @@
         "unlock_conditions": {
             "stage": 1
         },
+        "push": {
+            "end_content": "course rival is ending",
+            "start_content": "course rival has started",
+            "on_hook_full_content": "your hook reward box is full",
+            "refresh_ticket_content": "your tickets had refreshed",
+            "pvp_start_content": "course rival pvp has started",
+            "push_before_end_minute": 720
+        },
+        "mail_title": "course rival rewards",
+        "mail_content": "You forgot some rewards, please check",
         "signup_offer_list": [
             [
                 {
@@ -57,23 +67,23 @@
                     "signup_offer_id_list": [
                         {
                             "money": 1.99,
-                            "offer_id": 800107
+                            "offer_id": 800106
                         },
                         {
                             "money": 4.99,
-                            "offer_id": 800108
+                            "offer_id": 800107
                         },
                         {
                             "money": 9.99,
-                            "offer_id": 800109
+                            "offer_id": 800108
                         },
                         {
                             "money": 19.99,
-                            "offer_id": 800110
+                            "offer_id": 800109
                         },
                         {
                             "money": 29.99,
-                            "offer_id": 800111
+                            "offer_id": 800110
                         }
                     ]
                 }
@@ -90,23 +100,23 @@
                     "signup_offer_id_list": [
                         {
                             "money": 1.99,
-                            "offer_id": 800112
+                            "offer_id": 800111
                         },
                         {
                             "money": 4.99,
-                            "offer_id": 800113
+                            "offer_id": 800112
                         },
                         {
                             "money": 9.99,
-                            "offer_id": 800114
+                            "offer_id": 800113
                         },
                         {
                             "money": 19.99,
-                            "offer_id": 800115
+                            "offer_id": 800114
                         },
                         {
                             "money": 29.99,
-                            "offer_id": 800116
+                            "offer_id": 800115
                         }
                     ]
                 }
@@ -25712,9 +25722,8 @@
             ]
         },
         "pvp_conf": {
-            "settle_start": 1647619200,
             "start_time": 1647446400,
-            "end_time": 1647705600,
+            "end_time": 1679487273,
             "battle_limit": {
                 "home_field_level": 0,
                 "star": 500
