--- a/CourseCardSystem/HomeField/HomeFieldConfig.json
+++ b/CourseCardSystem/HomeField/HomeFieldConfig.json
@@ -101,19 +101,63 @@
                         {
                             "money": 1.99,
                             "offer_id": 800111
-                        },
+                        }
+                    ]
+                },
+                {
+                    "name": "tickets offer",
+                    "offer_type": 3,
+                    "money": 5,
+                    "type": 1,
+                    "start_time": 1616415273,
+                    "refresh_time": 86400,
+                    "end_before": 43200,
+                    "signup_offer_id_list": [
                         {
                             "money": 4.99,
                             "offer_id": 800112
-                        },
+                        }
+                    ]
+                },
+                {
+                    "name": "tickets offer",
+                    "offer_type": 3,
+                    "money": 10,
+                    "type": 1,
+                    "start_time": 1616415273,
+                    "refresh_time": 86400,
+                    "end_before": 43200,
+                    "signup_offer_id_list": [
                         {
                             "money": 9.99,
                             "offer_id": 800113
-                        },
+                        }
+                    ]
+                },
+                {
+                    "name": "tickets offer",
+                    "offer_type": 3,
+                    "money": 15,
+                    "type": 1,
+                    "start_time": 1616415273,
+                    "refresh_time": 86400,
+                    "end_before": 43200,
+                    "signup_offer_id_list": [
                         {
                             "money": 19.99,
                             "offer_id": 800114
-                        },
+                        }
+                    ]
+                },
+                {
+                    "name": "tickets offer",
+                    "offer_type": 3,
+                    "money": 20,
+                    "type": 1,
+                    "start_time": 1616415273,
+                    "refresh_time": 86400,
+                    "end_before": 43200,
+                    "signup_offer_id_list": [
                         {
                             "money": 29.99,
                             "offer_id": 800115
