--- a/CourseCardSystem/Group/CourseCardGroupConfig.json
+++ b/CourseCardSystem/Group/CourseCardGroupConfig.json
@@ -1,8 +1,9 @@
 {
     "99": {
         "id": 99,
-        "name": "stage1",
+        "name": "all",
         "is_active": true,
+        "color": 0,
         "course_cards": [
             {
                 "id": 999999999
@@ -30,6 +31,63 @@
             },
             {
                 "id": 8
+            }
+        ]
+    },
+    "98": {
+        "id": 98,
+        "name": "rare",
+        "is_active": true,
+        "color": 2,
+        "course_cards": [
+            {
+                "id": 999999999
+            },
+            {
+                "id": 3
+            },
+            {
+                "id": 8
+            }
+        ]
+    },
+    "97": {
+        "id": 97,
+        "name": "epic",
+        "is_active": true,
+        "color": 3,
+        "course_cards": [
+            {
+                "id": 999999999
+            },
+            {
+                "id": 4
+            },
+            {
+                "id": 5
+            },
+            {
+                "id": 6
+            },
+            {
+                "id": 7
+            }
+        ]
+    },
+    "96": {
+        "id": 96,
+        "name": "legend",
+        "is_active": true,
+        "color": 4,
+        "course_cards": [
+            {
+                "id": 999999999
+            },
+            {
+                "id": 1
+            },
+            {
+                "id": 2
             }
         ]
     }
